WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52616
[Qt][WK2] Not implemented warnings should not break layout tests
https://bugs.webkit.org/show_bug.cgi?id=52616
Summary
[Qt][WK2] Not implemented warnings should not break layout tests
Balazs Kelemen
Reported
2011-01-18 02:40:44 PST
The WebKit2 logging system always enables logging. There is a more sophistic mechanism in WebCore that actually disables logging if the QT_WEBKIT_LOG environment variable is not set. Maybe we should fix this in the future but I am dubious about that because the most of the qt codes does not use the wtf logging channels but qDebug and friends instead. Currently I just want to fix the issue to not break the tests by disabling logging unconditionally.
Attachments
Patch
(1.23 KB, patch)
2011-01-18 04:02 PST
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2011-01-18 04:02:11 PST
Created
attachment 79260
[details]
Patch
Balazs Kelemen
Comment 2
2011-01-18 04:04:26 PST
After the change the u-szeged wk2 bot will need a full rebuild because the dependencies from the prefix header is not handled by the build system.
Csaba Osztrogonác
Comment 3
2011-01-18 04:10:16 PST
Comment on
attachment 79260
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=79260&action=review
LGTM, r=me.
> Source/WebKit2/WebKit2Prefix.h:61 > +// Disable notImplemented() warnings to not break layout tests.
// Disable notImplemented() warnings not to break layout tests.
Balazs Kelemen
Comment 4
2011-01-18 04:31:22 PST
Comment on
attachment 79260
[details]
Patch Clearing flags.
Balazs Kelemen
Comment 5
2011-01-18 04:31:55 PST
Committed in
http://trac.webkit.org/changeset/76014
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug