Source/WebKit2/WebKit2Prefix.h
@@ -58,6 +58,10 @@ static const type& name() \
 #define JS_EXPORTDATA
 #define JS_EXPORTCLASS
 
+// Disable notImplemented() warnings not to break layout tests.
+// FIXME: WebKit2 logging system should behave identical to WebKit1.
+#define DISABLE_NOT_IMPLEMENTED_WARNINGS 1
+
 #elif defined(__APPLE__)
 
 #if !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD)
